style.css
body {
    font-family: sans-serif;
    background-color: #000000;
    color: gray;
    text-align: center;
    padding: 0.2em;
}

.bigButton {
    padding: 1.5em 1.5em 1.5em 1.5em;
    border-radius: 0em 0.5em 0.5em 0em;
    margin-left: 0;
    border: none;
    background-color: gray;
    font-weight: bold;
    color: white;
    font-size: 12pt;
}

.input {
    padding: 1.5em;
    border-radius: 0.5em 0em 0em 0.5em;
    border: none;
    background-color: black;
    color: white;
    font-size: 12pt;
    width: 60%;
}

.mainContent {
    margin: auto;
    text-align: center;
    border-radius: 0.5em;
    max-width: 50em;
    background-color: #353535;
    padding: 5em 1em 5em 1em;
    color: #fff;
    min-height: 12em;
}

.savedBlock {
    margin: auto;
    text-align: center;
    border-radius: 0.5em;
    max-width: 50em;
    background-color: #353535;
    padding: 2em 1em 2em 1em;
    color: #fff;
}

.savedBlock h2 {
    margin: 0.25em;
}

.footer {
    padding: 0.5em;
}

.footer a {
    color: gray
}

